--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,12 +7,12 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+   build:
 
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: make
+    - uses: actions/checkout@v2
+    - name: build
       run: make -C 3_Implementation
     
