--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,12 +7,12 @@ on:
     branches: [ main ]
 
 jobs:
-   build:
+   make:
 
     runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: build
-      run: make -C 3_Implementation
+    - name: make
+      run: make -C 3_Implementation/test
     
